--- a/style.scss
+++ b/style.scss
@@ -1,5 +1,3 @@
-@use "sass:map";
-
 $text-color-1:white;
 $text-color-2:rgb(180, 180, 180);
 $background-color-1:rgb(23, 23, 23);
@@ -69,11 +67,7 @@ h3{
 p{
   @include text_adjustable(0.7em, 0.2vw, $text-color-2)
 }
-span{
-  @include text_adjustable(0.8em, 0.2vw, $text-color-1)
-}
-a{
-  text-decoration: none;
+span, a{
   @include text_adjustable(0.8em, 0.2vw, $text-color-1)
 }
 ul{
@@ -196,18 +190,10 @@ main{
   aspect-ratio: 9 / 16;
   height: 100%;
   overflow: hidden;
-
   img{
       object-fit: fill;
       transition: transform 0.8s ease;
-  
-      &:hover{
-          transform: scale(1.1);
-      }
-      &:active{
-          transform: scale(1.1);
-      }
-      &:focus{
+      &:hover, &:active, &:focus{
           transform: scale(1.1);
       }
   }
@@ -247,17 +233,7 @@ main{
   overflow: hidden;
   flex-wrap: wrap;
   margin-top: 1%;
-  &:hover{
-      transform: scale(1.01);
-      border-top: 1px solid $accent-color;
-      border-bottom: 1px solid $accent-color;
-  }
-  &:active{
-      transform: scale(1.01);
-      border-top: 1px solid $accent-color;
-      border-bottom: 1px solid $accent-color;
-  }
-  &:focus{
+  &:hover, &:active, &:focus{
       transform: scale(1.01);
       border-top: 1px solid $accent-color;
       border-bottom: 1px solid $accent-color;
