renamed:    register.scss -> CSS/SCSS/register.scss 	renamed:    style.scss -> CSS/SCSS/style.scss 	renamed:    register.css -> CSS/register.css 	renamed:    register.css.map -> CSS/register.css.map 	renamed:    style.css -> CSS/style.css 	renamed:    style.css.map -> CSS/style.css.map 	renamed:    index.html -> HTML/index.html 	renamed:    info.html -> HTML/info.html 	renamed:    login.html -> HTML/login.html 	renamed:    news.html -> HTML/news.html 	renamed:    register.html -> HTML/register.html 	renamed:    register_script.js -> JS/register_script.js 	renamed:    script.js -> JS/script.js

--- a/CSS/SCSS/style.scss
+++ b/CSS/SCSS/style.scss
@@ -91,7 +91,7 @@ header{
 }
 #header-img-main{
   height: 95%;
-  background-image: linear-gradient(to top, $background-color-2 0.25%, rgba(255, 255, 255, 0)), url(./assets/header_fon.jpg);
+  background-image: linear-gradient(to top, $background-color-2 0.25%, rgba(255, 255, 255, 0)), url(../assets/header_fon.jpg);
   background-repeat: no-repeat;
   background-position: 0 80%;
   background-size: cover;
@@ -142,7 +142,7 @@ main{
   width: 30%;
   min-width: 300px;
   aspect-ratio: 1 / 1;
-  background-image: linear-gradient(-35deg, $background-color-1 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
+  background-image: linear-gradient(-35deg, $background-color-1 30%, rgba(255, 255, 255, 0)), url(../assets/image.png);
   @include set_bg_color("ac");
   z-index: -1;
   overflow: hidden;
