--- a/CSS/style.css
+++ b/CSS/style.css
@@ -58,7 +58,7 @@ header {
 
 #header-img-main {
   height: 95%;
-  background-image: linear-gradient(to top, rgb(68, 68, 68) 0.25%, rgba(255, 255, 255, 0)), url(./assets/header_fon.jpg);
+  background-image: linear-gradient(to top, rgb(68, 68, 68) 0.25%, rgba(255, 255, 255, 0)), url(../assets/header_fon.jpg);
   background-repeat: no-repeat;
   background-position: 0 80%;
   background-size: cover;
@@ -115,7 +115,7 @@ main {
   width: 30%;
   min-width: 300px;
   aspect-ratio: 1/1;
-  background-image: linear-gradient(-35deg, rgb(23, 23, 23) 30%, rgba(255, 255, 255, 0)), url(./assets/image.png);
+  background-image: linear-gradient(-35deg, rgb(23, 23, 23) 30%, rgba(255, 255, 255, 0)), url(../assets/image.png);
   background-color: rgb(220, 0, 0);
   z-index: -1;
   overflow: hidden;
