--- a/CSS/SCSS/register.scss
+++ b/CSS/SCSS/register.scss
@@ -29,7 +29,7 @@ main {
   width: 100%;
   height: 100%;
   @include flex_center();
-  background-image: url(./assets/reg_fon.png);
+  background-image: url(../assets/reg_fon.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
