--- a/CSS/style.css
+++ b/CSS/style.css
@@ -133,11 +133,6 @@ main {
   justify-content: center;
   flex-direction: column;
 }
-@media screen and (max-width: 700px) {
-  .main {
-    align-items: center;
-  }
-}
 
 #home-greetings {
   display: flex;
@@ -147,7 +142,7 @@ main {
   text-align: center;
 }
 
-#home-gallery {
+#home-gallery, #home-mods {
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -155,7 +150,7 @@ main {
   overflow: hidden;
 }
 @media screen and (max-width: 700px) {
-  #home-gallery {
+  #home-gallery, #home-mods {
     width: 90%;
   }
 }
@@ -192,18 +187,6 @@ main {
 }
 @media screen and (max-width: 700px) {
   #home-text {
-    width: 90%;
-  }
-}
-
-#home-mods {
-  width: 80%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-@media screen and (max-width: 700px) {
-  #home-mods {
     width: 90%;
   }
 }
@@ -379,6 +362,12 @@ main {
 }
 .news-part-img img {
   width: 100%;
+}
+.news-part-img img:hover, .news-part-img img:active, .news-part-img img:focus {
+  -webkit-mask: url(../assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png) luminance center no-repeat;
+          mask: url(../assets/dc3dc0fba5a1476c8e0cd10c83b66247-free-Photoroom.png) luminance center no-repeat;
+  -webkit-mask-size: 70%;
+          mask-size: 70%;
 }
 @media screen and (max-width: 1440px) {
   .news-part-img {
